--- a/ourRoom.html
+++ b/ourRoom.html
@@ -15,7 +15,8 @@
 
 <body>
     <h2>Hey, it's <span id="name">%USERNAME%</span>!</h2>
-    <h5>Say hello! Everyone here is a lot like you.</h5>
+    <h5>Say hello! Everyone here is a lot like you - and if they aren't yet, they will be. Perhaps describe your rig?
+    </h5>
     <form action="/chat" method="post">
         <input style="display: none;" type="text" name="username" value="%USERNAME%" />
         <input style="display: none;" type="text" name="fingerprint" value="%FINGERPRINT%" />
