Split out functions, improve routing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <h1>FingrPrintr</h1>
     <h2>the internet's loneliest chatroom</h2>
-    <form action="room" method="post">
+    <form method="post">
         <div class="input-line">
             Fingerprint: <input id="fp" size="34" type="text" name="fingerprint" readonly value="%FINGERPRINT%" />
         </div>
@@ -43,7 +43,7 @@
         </div>
         <input type="submit" value="Let's Chat!" />
     </form>
-    <a href="/list">See all rooms</a>
+    <a href="/rooms">See all rooms</a>
 </body>
 
 <script type="module">
