--- a/otherRoom.html
+++ b/otherRoom.html
@@ -17,11 +17,7 @@
     <h2>Ew, it's <span id="name">%USERNAME%</span>.</h2>
     <h5>You can't speak here, but feel free to look around.</h5>
     <div id="chats"></div>
-    <a href="/list">See all rooms</a>
+    <a href="/rooms">See all rooms</a>
 </body>
-
-<script type="module">
-
-</script>
 
 </html>
