--- a/ourRoom.html
+++ b/ourRoom.html
@@ -15,20 +15,17 @@
 
 <body>
     <h2>Hey, it's <span id="name">%USERNAME%</span>!</h2>
-    <h5>Say hello! Everyone here is a lot like you - and if they aren't yet, they will be. Perhaps describe your rig?
+    <h5>Say hello! Everyone here is a lot like you - and if they aren't yet, they will be soon. Perhaps describe your
+        rig?
     </h5>
-    <form action="/chat" method="post">
+    <form method="post">
         <input style="display: none;" type="text" name="username" value="%USERNAME%" />
         <input style="display: none;" type="text" name="fingerprint" value="%FINGERPRINT%" />
         <input type="text" maxlength="1000" name="message" placeholder="Say Something!" />
         <input type="submit" value="Speak" />
     </form>
     <div id="chats"></div>
-    <a href="/list">See all rooms</a>
+    <a href="/rooms">See all rooms</a>
 </body>
-
-<script type="module">
-
-</script>
 
 </html>
