--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <h1>FingrPrintr</h1>
-    <h2>the internet's loneliest chatroom</h2>
+    <h2>The Internet's Loneliest Social Network</h2>
     <form method="post">
         <div class="input-line">
             Fingerprint: <input id="fp" size="34" type="text" name="fingerprint" readonly value="%FINGERPRINT%" />
