--- a/404.html
+++ b/404.html
@@ -1,3 +1,5 @@
 Whatever you're looking for, you wont find it here.
 <br />
 You may find it <a href="https://sacred-texts.com/">here</a>.
+<br />
+Or just return <a href="/">home</a>.
