--- a/otherRoom.html
+++ b/otherRoom.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FingrPrintr</title>
-    <style>
-        #name {
-            text-transform: capitalize;
-        }
-    </style>
-</head>
+<head></head>
 
-<body>
+<body id="otherRoom">
     <h2>Ew, it's <span id="name">%USERNAME%</span>.</h2>
-    <h5>You can't speak here, but feel free to look around.</h5>
-    <div id="chats"></div>
-    <a href="/rooms">See all rooms</a>
+    <h5>You aren't welcome to speak here, but feel free to snoop around. <a href="/">Go to your room?</a></h5>
+    <main id="chats"></main>
 </body>
 
 </html>
