--- a/rooms.html
+++ b/rooms.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FingrPrintr</title>
-</head>
+<head></head>
 
-<body>
+<body id="rooms">
+    <h2>All the Rooms!</h2>
+    <h5>Sorted by number of unique authors. You wont be able to chat in rooms other than your own, but you're welcome to
+        explore!</h5>
+    <main id="list"></main>
     <span id="lastUpdate"></span>
-    <div id="list"></div>
 </body>
 
 </html>
