--- a/otherRoom.html
+++ b/otherRoom.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head></head>
 
-<head></head>
-
-<body id="otherRoom">
-    <h2>Ew, it's <span id="name">%USERNAME%</span>.</h2>
-    <h5>You aren't welcome to speak here, but feel free to snoop around. <a href="/">Go to your room?</a></h5>
-    <main id="chats"></main>
-</body>
-
+	<body id="otherRoom">
+		<h2>Ew, it's <span id="name">%USERNAME%</span>.</h2>
+		<h5>
+			You aren't welcome to speak here, but feel free to snoop around.
+			<a href="/">Go to your room?</a>
+		</h5>
+		<main id="chats"></main>
+	</body>
 </html>
