--- a/rooms.html
+++ b/rooms.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head></head>
 
-<head></head>
-
-<body id="rooms">
-    <h2>All the Rooms!</h2>
-    <h5>Sorted by number of unique authors. You wont be able to chat in rooms other than your own, but you're welcome to
-        explore!</h5>
-    <main id="list"></main>
-    <span id="lastUpdate"></span>
-</body>
-
+	<body id="rooms">
+		<h2>All the Rooms!</h2>
+		<h5>
+			Sorted by number of unique authors. You wont be able to chat in
+			rooms other than your own, but you're welcome to explore!
+		</h5>
+		<main id="list"></main>
+		<span id="lastUpdate"></span>
+	</body>
 </html>
