--- a/public/rooms.html
+++ b/public/rooms.html
@@ -5,8 +5,8 @@
 	<body id="rooms">
 		<h2>All the Rooms!</h2>
 		<h5>
-			Sorted by number of unique authors. You wont be able to chat in
-			rooms other than your own, but you're welcome to explore!
+			You wont be able to chat in rooms other than your own, but you're
+			welcome to explore!
 		</h5>
 		<main id="list"></main>
 		<span id="lastUpdate"></span>
