--- a/public/404.html
+++ b/public/404.html
@@ -1,5 +1,15 @@
-Whatever you're looking for, you wont find it here.
-<br />
-You may find it <a href="https://sacred-texts.com/">here</a>.
-<br />
-Or just return <a href="/">home</a>.
+<!DOCTYPE html>
+<html lang="en">
+	<head></head>
+
+	<body>
+		<h2>404</h2>
+		<h5>
+			Whatever you're looking for, you wont find it here.
+			<br />
+			You may find it <a href="https://sacred-texts.com/">here</a>.
+			<br />
+			Or just return <a href="/">home</a>.
+		</h5>
+	</body>
+</html>
