Note on tracking

--- a/public/legal.html
+++ b/public/legal.html
@@ -25,8 +25,23 @@
 					target="_blank"
 					rel="noopener noreferrer"
 					href="https://github.com/JacksonKearl"
-					>my GitHub</a
-				>)
+				>
+					my GitHub
+				</a>
+				).
+			</p>
+			<h3>Tracking</h3>
+			<p>
+				This site uses
+				<a
+					target="_blank"
+					rel="noopener noreferrer"
+					href="https://developers.cloudflare.com/analytics/web-analytics/"
+				>
+					Cloudflare Web Analytics
+				</a>
+				to track performance and usage. Users are not tracked at an
+				individual level.
 			</p>
 		</main>
 	</body>
