--- a/public/legal.html
+++ b/public/legal.html
@@ -19,8 +19,8 @@
 				recent 100 messages in each room are maintained indefinitely.
 			</p>
 			<p>
-				Deleting information is not possible to the public at large, but
-				can be requested by contacting me via email (available on
+				Deleting information is not available to the public at large,
+				but can be requested by contacting me via email (see
 				<a
 					target="_blank"
 					rel="noopener noreferrer"
