--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 				value="Let's Chat!"
 			/>
 		</form>
-		<main>
+		<main class="text">
 			<h4>What?</h4>
 			<p>
 				A social network where you chat with people who have an
@@ -94,7 +94,6 @@
 
 	<script type="module">
 		import { FingerprintJS } from './fingrprintr.js'
-
 		;(async () => {
 			const button = document.getElementById('chatButton')
 			const fpEl = document.getElementById('fp')
