--- a/public/legal.html
+++ b/public/legal.html
@@ -4,9 +4,8 @@
 
 	<body>
 		<h2>For the Lawyers</h2>
-		<h5></h5>
-		<main>
-			<h3>Data & Privacy</h3>
+		<main class="text">
+			<h4>Data & Privacy</h4>
 			<p>
 				There are a couple cookies, one that maintains your name, one
 				that caches your browser fingerprint. These are both necessary
@@ -30,7 +29,7 @@
 				</a>
 				).
 			</p>
-			<h3>Tracking</h3>
+			<h4>Tracking</h4>
 			<p>
 				This site uses
 				<a
@@ -42,6 +41,17 @@
 				</a>
 				to track performance and usage. Users are not tracked at an
 				individual level.
+			</p>
+			<h4>Third Party Contributions</h4>
+			<p>
+				See the
+				<a
+					target="_blank"
+					rel="noopener noreferrer"
+					href="https://github.com/JacksonKearl/fingrprintr#third-party-contributions"
+				>
+					repo</a
+				>.
 			</p>
 		</main>
 	</body>
