--- a/public/legal.html
+++ b/public/legal.html
@@ -25,9 +25,8 @@
 					rel="noopener noreferrer"
 					href="https://github.com/JacksonKearl"
 				>
-					my GitHub
-				</a>
-				).
+					my GitHub</a
+				>).
 			</p>
 			<h4>Tracking</h4>
 			<p>
@@ -37,8 +36,8 @@
 					rel="noopener noreferrer"
 					href="https://developers.cloudflare.com/analytics/web-analytics/"
 				>
-					Cloudflare Web Analytics
-				</a>
+					Cloudflare Web Analytics</a
+				>
 				to track performance and usage. Users are not tracked at an
 				individual level.
 			</p>
